Ensure grouped products wrap

--- a/ui/src/Products/ProductListGrouped.scss
+++ b/ui/src/Products/ProductListGrouped.scss
@@ -42,5 +42,6 @@
 
   .groupedProducts {
     display: flex;
+    flex-wrap: wrap;
   }
 }
